; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/octeon/extr_ethernet.c_cvm_oct_link_poll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/octeon/extr_ethernet.c_cvm_oct_link_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.octeon_ethernet = type { i64, i32 }
%struct.TYPE_7__ = type { i64, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cvm_oct_link_poll(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.octeon_ethernet*, align 8
  %4 = alloca %struct.TYPE_7__, align 8
  %5 = alloca %struct.TYPE_7__, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %6 = load %struct.net_device*, %struct.net_device** %2, align 8
  %7 = call %struct.octeon_ethernet* @netdev_priv(%struct.net_device* %6)
  store %struct.octeon_ethernet* %7, %struct.octeon_ethernet** %3, align 8
  %8 = load %struct.octeon_ethernet*, %struct.octeon_ethernet** %3, align 8
  %9 = getelementptr inbounds %struct.octeon_ethernet, %struct.octeon_ethernet* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call { i64, i64 } @cvmx_helper_link_get(i32 %10)
  %12 = bitcast %struct.TYPE_7__* %5 to { i64, i64 }*
  %13 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %12, i32 0, i32 0
  %14 = extractvalue { i64, i64 } %11, 0
  store i64 %14, i64* %13, align 8
  %15 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %12, i32 0, i32 1
  %16 = extractvalue { i64, i64 } %11, 1
  store i64 %16, i64* %15, align 8
  %17 = bitcast %struct.TYPE_7__* %4 to i8*
  %18 = bitcast %struct.TYPE_7__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %17, i8* align 8 %18, i64 16, i1 false)
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.octeon_ethernet*, %struct.octeon_ethernet** %3, align 8
  %22 = getelementptr inbounds %struct.octeon_ethernet, %struct.octeon_ethernet* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp eq i64 %20, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %1
  br label %76

26:                                               ; preds = %1
  %27 = load %struct.octeon_ethernet*, %struct.octeon_ethernet** %3, align 8
  %28 = getelementptr inbounds %struct.octeon_ethernet, %struct.octeon_ethernet* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = bitcast %struct.TYPE_7__* %4 to { i64, i64 }*
  %31 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %30, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = call i64 @cvmx_helper_link_set(i32 %29, i64 %32, i64 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %26
  %38 = load %struct.octeon_ethernet*, %struct.octeon_ethernet** %3, align 8
  %39 = getelementptr inbounds %struct.octeon_ethernet, %struct.octeon_ethernet* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  store i64 %40, i64* %41, align 8
  br label %47

42:                                               ; preds = %26
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load %struct.octeon_ethernet*, %struct.octeon_ethernet** %3, align 8
  %46 = getelementptr inbounds %struct.octeon_ethernet, %struct.octeon_ethernet* %45, i32 0, i32 0
  store i64 %44, i64* %46, align 8
  br label %47

47:                                               ; preds = %42, %37
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %60

52:                                               ; preds = %47
  %53 = load %struct.net_device*, %struct.net_device** %2, align 8
  %54 = call i64 @netif_carrier_ok(%struct.net_device* %53)
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %59, label %56

56:                                               ; preds = %52
  %57 = load %struct.net_device*, %struct.net_device** %2, align 8
  %58 = call i32 @netif_carrier_on(%struct.net_device* %57)
  br label %59

59:                                               ; preds = %56, %52
  br label %68

60:                                               ; preds = %47
  %61 = load %struct.net_device*, %struct.net_device** %2, align 8
  %62 = call i64 @netif_carrier_ok(%struct.net_device* %61)
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %67

64:                                               ; preds = %60
  %65 = load %struct.net_device*, %struct.net_device** %2, align 8
  %66 = call i32 @netif_carrier_off(%struct.net_device* %65)
  br label %67

67:                                               ; preds = %64, %60
  br label %68

68:                                               ; preds = %67, %59
  %69 = load %struct.octeon_ethernet*, %struct.octeon_ethernet** %3, align 8
  %70 = bitcast %struct.TYPE_7__* %4 to { i64, i64 }*
  %71 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %70, i32 0, i32 0
  %72 = load i64, i64* %71, align 8
  %73 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %70, i32 0, i32 1
  %74 = load i64, i64* %73, align 8
  %75 = call i32 @cvm_oct_note_carrier(%struct.octeon_ethernet* %69, i64 %72, i64 %74)
  br label %76

76:                                               ; preds = %68, %25
  ret void
}

declare dso_local %struct.octeon_ethernet* @netdev_priv(%struct.net_device*) #1

declare dso_local { i64, i64 } @cvmx_helper_link_get(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @cvmx_helper_link_set(i32, i64, i64) #1

declare dso_local i64 @netif_carrier_ok(%struct.net_device*) #1

declare dso_local i32 @netif_carrier_on(%struct.net_device*) #1

declare dso_local i32 @netif_carrier_off(%struct.net_device*) #1

declare dso_local i32 @cvm_oct_note_carrier(%struct.octeon_ethernet*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
